# PathTracer

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: Conan.cmake  ProjectSettings.cmake  ProjectWarnings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  Primitive.h
src/math/: CMakeLists.txt  Hit.h  Ray.h  Sphere.h  Vec3.cpp  Vec3.h
test/: CMakeLists.txt  tests.cpp
test/math/: CMakeLists.txt  RayTests.cpp  SphereTests.cpp  Vec3Tests.cpp
